# pymodaq_plugin_manager

./: .gitignore  MANIFEST.in  README.md  README.rst  README_base.md  README_base.rst  pyproject.toml  requirements.txt  setup.py
.github/workflows/: compatibility.yml  fetch_pypi_updates.yml  python-publish.yml
doc/: PluginList.md
pymodaq_plugin_manager/: manager.py  validate.py  version.py
pymodaq_plugin_manager/doc/: PluginList.md
pymodaq_plugin_manager/src/: PluginList.json  plugin_list.schema
scripts/: compatibility-checker.py
src/pymodaq_plugin_manager/: __init__.py  compatibility_checker.py  manager.py  utils.py  validate.py  validate_as_workflow.py  validate_testing.py
src/pymodaq_plugin_manager/data/: PluginList.json
